<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.sourceforge.jadex</groupId>
	<artifactId>jadex-parent</artifactId>
	<packaging>pom</packaging>
	<version> 3.0-SNAPSHOT </version>
	<name>jadex-parent</name>
	<url>http://jadex.sourceforge.net</url>

	<description>
		Jadex parent ist the parent POM for all jadex modules
		and contains common maven build information.
	</description>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.6</java.version>
		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
		<maven-jar-plugin.version>2.4</maven-jar-plugin.version>
		<maven-source-plugin.version>2.1.2</maven-source-plugin.version>
		<maven-javadoc-plugin.version>2.8.1</maven-javadoc-plugin.version>
		<maven-gpg-plugin.version>1.1</maven-gpg-plugin.version>
		<jadex_build_version>${project.version}</jadex_build_version>
	</properties>
	

	<licenses>
		<license>
			<name>GNU GENERAL PUBLIC LICENSE Version 3 or later</name>
			<url>http://www.activecomponents.org/bin/view/Download/License</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>alex</id>
			<name>Alexander Pokahr</name>
			<email>pokahr@gmx.net</email>
			<url>http://vsis-www.informatik.uni-hamburg.de/members/info.php/84
			</url>
			<organization>University of Hamburg</organization>
			<organizationUrl>http://vsis-www.informatik.uni-hamburg.de/
			</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>lars</id>
			<name>Lars</name>
			<email>braubach@gmx.net</email>
			<url>http://vsis-www.informatik.uni-hamburg.de/members/info.php/80
			</url>
			<organization>University of Hamburg</organization>
			<organizationUrl>http://vsis-www.informatik.uni-hamburg.de/
			</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
		<developer>
			<id>kai</id>
			<name>Kai Jander</name>
			<email>kai.jander@googlemail.com</email>
			<url>http://vsis-www.informatik.uni-hamburg.de/members/info.php/974
			</url>
			<organization>University of Hamburg</organization>
			<organizationUrl>http://vsis-www.informatik.uni-hamburg.de/
			</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<scm>
		<url>http://jadex.svn.sourceforge.net/viewvc/jadex/</url>
	</scm>

	
	<!-- We need this profile as workaround for including .apks in maven assemblies -->
	<profiles>
		<profile>
			<id>deploy</id>
			<distributionManagement>
				<repository>
					<id>sonatype-nexus-staging</id>
					<name>Nexus Release Repository</name>
					<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
				<snapshotRepository>
					<id>jadex-public-snapshots</id>
					<name>Jadex Snapshot Repository</name>
					<url>http://localhost/nexus/content/repositories/snapshots/</url>
					<uniqueVersion>false</uniqueVersion>
				</snapshotRepository>
			</distributionManagement>
		</profile>
		
		<!-- Ignore errors in javadoc tags otherwise build will fail with Java 8 (todo: fix javadoc tags in source). -->
		<profile>
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,</jdk>
			</activation>

			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		    <resource>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
					<exclude>**/.svn/*</exclude>
					<exclude>**/dungeonkeeper/</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
				<includes>
					<include>**/*</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
					<exclude>**/.svn/*</exclude>
				</excludes>
			</testResource>
		</testResources>

		<plugins>
			<!-- todo: required for maven import? -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<sourceExcludes>
						<sourceExclude>**/.svn/**</sourceExclude>
					</sourceExcludes>
					<sourceIncludes>
						<sourceInclude>**/*.xml</sourceInclude>
					</sourceIncludes>
				</configuration>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
        		<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<excludes>
						<exclude>**/dungeonkeeper/</exclude>
					</excludes>
      				<!-- <fork>true</fork>
     				<meminitial>1024m</meminitial>
     				<maxmem>2024m</maxmem>-->
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
        		<version>${maven-source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>install</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>**/dungeonkeeper/</exclude>
					</excludes>
				</configuration>
			</plugin>
			
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-javadoc-plugin</artifactId>
        		<version>${maven-javadoc-plugin.version}</version>
        		<configuration>
        			<show>public</show>
					<excludePackageNames>*.dungeonkeeper.*</excludePackageNames>
        			<!-- 
        			<aggregate>true</aggregate>
					<minmemory>128m</minmemory>
					<maxmemory>1g</maxmemory>
        			 -->
        		</configuration>
				<executions>
					<execution>
						<id>attach-javadoc</id>
						<phase>install</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
        	</plugin>
        	
        	<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>${maven-gpg-plugin.version}</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>install</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>xml-maven-plugin</artifactId>
        		<version>1.0</version>
				<executions>
					<execution>
						<id>generate-schemadoc</id>
						<phase>package</phase>
						<goals>
							<goal>transform</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<transformationSets>
						<transformationSet>
							<dir>src/main/config</dir>
							<includes>
								<include>*.xsd</include>
							</includes>
							<stylesheet>../docs/xs3p.xsl</stylesheet>
							<fileMappers>
								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.FileExtensionMapper">
									<targetExtension>.html</targetExtension>
								</fileMapper>
							</fileMappers>
						</transformationSet>
					</transformationSets>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
				<configuration>
				    <!-- <jvmFlags>
				    	<jvmFlag>-XX:MaxPermSize=512m</jvmFlag>
				    </jvmFlags>-->
				    <argLine>-ea -Xmx512m -XX:MaxPermSize=128m -XX:+CMSPermGenSweepingEnabled -XX:+CMSClassUnloadingEnabled</argLine>  
				    <!-- <fork>true</fork>-->
				    <!-- <argLine>-Xms512m</argLine>
				    <argLine>-Xmx1024m</argLine>
				    <argLine>-XX:MaxPermSize=512m</argLine>
				    <argLine>-XX:+CMSPermGenSweepingEnabled</argLine>
				    <argLine>-XX:+CMSClassUnloadingEnabled</argLine> -->
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<!-- <version>3.8.1</version> -->
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<reporting>
  		<plugins>
     		<plugin>
           		<groupId>org.codehaus.mojo</groupId>
           		<artifactId>findbugs-maven-plugin</artifactId>
           		<version>2.5.2</version>
				<configuration>
				<findbugsXmlOutput>true</findbugsXmlOutput>
				<findbugsXmlWithMessages>true</findbugsXmlWithMessages>
				<xmlOutput>true</xmlOutput>
				</configuration>
	        </plugin>
		</plugins>
	</reporting>
	
</project>
